--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <!DOCTYPE html>
 <!---Coding By CoderGirl | www.codinglabweb.com--->
@@ -8,7 +9,71 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--<title>Login & Registration Form | CoderGirl</title>-->
   <!---Custom CSS File--->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{#  <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
+
+    <style>
+        .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login {
+  width: 300px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login header {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.login form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login input[type="text"],
+.login input[type="password"],
+.login input[type="submit"] {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+}
+
+.login input[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+}
+
+.login input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.signup {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.signup a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.signup a:hover {
+  text-decoration: underline;
+}
+
+    </style>
+
 </head>
 <body>
   <div class="container">
@@ -31,6 +96,10 @@
       <div class="signup">
         <span class="signup">Don't have an account?
          <a href="{% url 'register' %}"><label for="check">Signup</label></a>
+        </span> <br><br>
+
+          <span class="signup">Go back to <a href="/">home page</a>
+{#         <a href="/"><label for="check">Home</label></a>#}
         </span>
       </div>
     </div>
