--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Conferencing App</title>
+  <title>Majestique Conferencing App</title>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Our Video Conferencing App</h1>
+    <h1>Welcome to Majestique Conferencing App</h1>
     <p>Join meetings with ease and stay connected with your team.</p>
     <div class="buttons">
       <a href="{% url 'login' %}" class="btn">Login</a>
