--- a/templates/login.html
+++ b/templates/login.html
@@ -1,76 +1,73 @@
 
 {% load static %}
 <!DOCTYPE html>
-<!---Coding By CoderGirl | www.codinglabweb.com--->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--<title>Login & Registration Form | CoderGirl</title>-->
-  <!---Custom CSS File--->
-{#  <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
+    <title>Majestique | Login</title>
 
     <style>
         .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+        }
 
-.login {
-  width: 300px;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+        .login {
+          width: 300px;
+          padding: 20px;
+          background-color: #f9f9f9;
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-.login header {
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 20px;
-}
+        .login header {
+          text-align: center;
+          font-size: 24px;
+          margin-bottom: 20px;
+        }
 
-.login form {
-  display: flex;
-  flex-direction: column;
-}
+        .login form {
+          display: flex;
+          flex-direction: column;
+        }
 
-.login input[type="text"],
-.login input[type="password"],
-.login input[type="submit"] {
-  margin-bottom: 15px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  outline: none;
-}
+        .login input[type="text"],
+        .login input[type="password"],
+        .login input[type="submit"] {
+          margin-bottom: 15px;
+          padding: 10px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          outline: none;
+        }
 
-.login input[type="submit"] {
-  background-color: #007bff;
-  color: #fff;
-  cursor: pointer;
-}
+        .login input[type="submit"] {
+          background-color: #007bff;
+          color: #fff;
+          cursor: pointer;
+        }
 
-.login input[type="submit"]:hover {
-  background-color: #0056b3;
-}
+        .login input[type="submit"]:hover {
+          background-color: #0056b3;
+        }
 
-.signup {
-  text-align: center;
-  margin-top: 10px;
-}
+        .signup {
+          text-align: center;
+          margin-top: 10px;
+        }
 
-.signup a {
-  color: #007bff;
-  text-decoration: none;
-}
+        .signup a {
+          color: #007bff;
+          text-decoration: none;
+        }
 
-.signup a:hover {
-  text-decoration: underline;
-}
+        .signup a:hover {
+          text-decoration: underline;
+        }
 
     </style>
 
